--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
-html lang="en"><head>
-<body bgcolor="#000000">
-<div id="bg">
-&lt;<img src="img/Monkey.gif" alt="Just chill." class="bg">
-      </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BG Image Randomizer</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <section></section>
+    <div class="btn-img">
+    
+</div>
+<script src="./app.js"></script>
+</body>
+</html>
